# inventory-forecast-factory

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: advanced_requirements_audit.md  advanced_showcase_cases.md  architecture_diagrams.md  capability_extraction.md  capability_lifecycle_features.md  custom_llm.md  data_schema.md  evaluation_acceptance_matrix.md  execution_trace.md  final_submission_audit.md  inventory_evaluation.md  knowledge_graph_schema.md  multi_agent_code_collaboration.md  online_research_and_optimization.md  performance_and_runtime.md  project_structure.md  references.md  requirements_traceability.md  scoring_alignment.md  usage_examples_and_test_cases.md  web_interface.md
examples/: README.md  capability_request.json
inventory_agent/: __init__.py  __main__.py  cli.py  config.py  domain.py  execution.py  plugins.py
knowledge/: base_capability_graph.graphml  base_capability_graph.html  base_capability_graph.json  capability_spec.schema.json  extracted_capabilities.json  extracted_external_capabilities.json
scripts/: clean_workspace.py  generate_business_demo.py  generate_submission_examples.py  run_acceptance_cases.py  run_advanced_showcase.py  validate_external_services.py  validate_project.py
tests/: test_acceptance_cases.py  test_agents.py  test_audit.py  test_business_materials.py  test_clean_workspace.py  test_cli.py  test_codegen.py  test_config.py  test_data_loader.py  test_execution.py  test_extraction.py  test_failures.py  test_forecasting.py  test_knowledge_graph.py  test_llm.py  test_panel.py  (+11 more)
(+230 files in other folders)
