[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-capability-factory"
version = "0.1.0"
description = "AI Agent algorithm capability factory with an inventory forecasting scenario"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "langgraph>=0.2",
  "networkx>=3.2",
  "numpy>=1.26",
  "openai>=1.30",
  "pandas>=2.1",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
[project.scripts]
inventory-agent = "inventory_agent.cli:main"

[tool.setuptools.packages.find]
include = ["inventory_agent*"]

[tool.setuptools.package-data]
inventory_agent = ["web/static/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
